2008-02-29  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add mime-type for SMAF,
	XMF and iMelody ringtones, and MRML "playlist" type

	* tests/list:
	* tests/playlist.mrl:
	* tests/ringtone.ime:
	* tests/ringtone.mmf: Add tests for the above minus XMF

2008-02-28  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Remove *.amr from 3gpp files,
	they're already used by audio/AMR,
	Add audio/mp3 as an alias for audio/mpeg
	Add audio/vnd.m-realaudio as an alias for audio/vnd.rn-realaudio
	Add audio/wma as an alias for video/x-ms-asf

2008-02-21  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/registry.reg: Detect registry files when they're
	UTF-16 encoded as exported by regedit on Windows XP,
	magic provided by Robert Millan <rmh@aybabtu.com>

2008-02-21  Bastien Nocera  <hadess@hadess.net>

	* update-mime-database.1: Small fixes to the man page by
	Pascal Terjan <pterjan@gmail.com> (Closes: #12311)

2008-02-21  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Update deps to glib 2.6.0, spotted by
	Guillaume D. <guillaumed@users.sf.net> (Closes: #12249)

2008-02-21  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Robert Millan <rmh@aybabtu.com>
	to add Microsoft Registry mime-types, for use in Wine
	(Closes: #10312)

	* tests/list:
	* tests/registry.reg:
	* tests/registry-nt.reg: Add test files for the Windows Registry
	mime-type

2008-02-21  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Update DJVU magic and aliases from
	the upstream DjVulibre projects, spotted by Leon Bottou
	<leon@bottou.org> (Closes: #14009)

	* tests/2001_compression_overview.djvu:
	* tests/list: Add test case for DjVu files

2008-02-21  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Osmo Salomaa <otsaloma@cc.hut.fi>
	to add the SubViewer subtitle mime-type

	* tests/subtitle-subviewer.sub:
	* tests/list: Add test case (Closes: #12478)
