@@ -1,3 +1,9 @@
+2008-03-04  Bastien Nocera  <hadess@hadess.net>
+
+	* update-mime-database.c (process_freedesktop_node):
+	Just ignore fields we don't know about, instead of
+	erroring out, patch by David Faure <dfaure@trolltech.com>
+
 2008-02-29  Bastien Nocera  <hadess@hadess.net>
 
 	* freedesktop.org.xml.in: Add mime-type for SMAF,
